# Project_3_sem_cpp

./: CMakeLists.txt  README.md  buttons  buttons.cpp  buttons.h  class.cpp  class.h  functions.cpp  functions.h  global.cpp  global.h  main  main.cpp  progress.txt  sfml-app  visual  visual.cpp  visual.h
Useful Links/: How to upload SFML  How upload SDL  Project Structure
